Fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   color: #f4ebd3;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 /* Layout Classes */
